[package]
name = "msgpack-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
error-stack = "0.4.0"
rmpv = { version = "1.0.1", features = ["with-serde"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
