[package]
name = "msgpack-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mpc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
error-stack = "0.4.0"
rmp-serde = "1.1.2"
serde-transcode = "1.1.1"
serde_json = "1.0.105"
thiserror = "1.0.47"

[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
