[package]
authors = ["Flix <felix.dommes@rwth-aachen.de>"]
categories = ["command-line-utilities", "encoding"]
description = "CLI tool to convert MessagePack data to JSON and vice versa."
documentation = "https://github.com/FlixCoder/msgpack-cli"
edition = "2021"
homepage = "https://github.com/FlixCoder/msgpack-cli"
keywords = ["msgpack", "json", "cli"]
license = "MIT"
name = "messagepack-cli"
readme = "README.md"
repository = "https://github.com/FlixCoder/msgpack-cli"
resolver = "2"
version = "0.1.0"

[[bin]]
name = "mpc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
error-stack = "0.4.0"
rmp-serde = "1.1.2"
serde-transcode = "1.1.1"
serde_json = "1.0.105"
thiserror = "1.0.47"

[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
